--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "googleapis": "^118.0.0",
     "jest": "^29.3.1",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mysql2": "^3.2.3",
     "parse": "^4.0.1",
     "sequelize": "^6.19.0",
