--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.4",
     "mysql2": "^3.2.3",
     "parse": "^4.0.1",
+    "nodemailer": "^6.9.3",
     "sequelize": "^6.19.0",
     "supertest": "^6.3.3"
   }
